sparse format bugfix

--- a/notebooks/shanmuga.ipynb
+++ b/notebooks/shanmuga.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from util import print_log, validate_model"
+    "from util import print_log, validate_model, sparse_validate_model"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-04-02 19:33:58,497068\tstarting vectorizer fit_transform\n"
+      "2016-04-02 20:11:38,672511\tstarting vectorizer fit_transform\n",
+      "2016-04-02 20:17:10,986182\tcompleted vectorizer fit_transform\n"
      ]
     }
    ],
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -440,8 +441,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-04-02 19:21:40,549554\tstarting sparse category\n",
-      "2016-04-02 19:21:45,336085\tcompleted sparse category\n"
+      "2016-04-02 20:17:11,209707\tstarting sparse category\n",
+      "2016-04-02 20:17:15,249044\tcompleted sparse category\n"
      ]
     }
    ],
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +466,7 @@
        "((999996, 609), ((999996,), 609))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -487,13 +488,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "joined_data = hstack([sparse_category, sparse_title], format='csr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(999996, 63387)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model validation\n",
+    "--"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "joined_data = hstack([sparse_category, sparse_title])"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.cross_validation import ShuffleSplit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-04-02 20:17:16,079569\tstarting validation\n",
+      "2016-04-02 20:17:17,595724\tstarting iteration 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validate logistic regression \n",
+    "print_log(\"starting validation\")\n",
+    "sparse_validate_model(X=joined_data, Y=train.brand_id.astype(str), classifier=LogisticRegression(), \n",
+    "               split_generator=lambda Y: ShuffleSplit(n=Y.shape[0], n_iter=3, test_size=0.4))\n",
+    "print_log(\"completed validation\")"
    ]
   },
   {
