save sparse matrix files

--- a/notebooks/shanmuga.ipynb
+++ b/notebooks/shanmuga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -65,9 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
        "((999996, 3), (619243, 2))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
        "(4, 0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -247,7 +247,7 @@
        "575503  \"This hub is built strong and ideal for industrial environments. With the StarTech.com ST4200USBM 4-port hub you can wall-mount or install onto a DIN rail for convenient access to the ports. This four port industrial hub can be bus powered or self powered with a three wire terminal block connector 7-24V . Plug in your most demanding next-generation peripherals and still enjoy data transfer speed\\tStarTech\\tcomputers & accessories > networking products > hubs\\n"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,7 @@
        "(707,)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +309,7 @@
        "(32231,)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -380,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-04-02 20:11:38,672511\tstarting vectorizer fit_transform\n",
-      "2016-04-02 20:17:10,986182\tcompleted vectorizer fit_transform\n"
+      "2016-04-02 20:54:45,879530\tstarting vectorizer fit_transform\n",
+      "2016-04-02 20:59:47,948838\tcompleted vectorizer fit_transform\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -441,21 +441,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-04-02 20:17:11,209707\tstarting sparse category\n",
-      "2016-04-02 20:17:15,249044\tcompleted sparse category\n"
+      "2016-04-02 20:59:48,163386\tstarting sparse category\n",
+      "2016-04-02 20:59:52,085335\tcompleted sparse category\n"
      ]
     }
    ],
    "source": [
-    "temp_vectorizer = DictVectorizer()\n",
+    "category_dict_vectorizer = DictVectorizer()\n",
     "print_log(\"starting sparse category\")\n",
-    "sparse_category = temp_vectorizer.fit_transform(train.category_id.astype(str).apply(lambda x: {x: 1}))\n",
+    "sparse_category = category_dict_vectorizer.fit_transform(train.category_id.astype(str).apply(lambda x: {x: 1}))\n",
     "print_log(\"completed sparse category\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +466,7 @@
        "((999996, 609), ((999996,), 609))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -510,13 +510,47 @@
        "(999996, 63387)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "joined_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.io import mmwrite, mmread\n",
+    "mmwrite('joined_data.mtx', joined_data)\n",
+    "mmwrite('sparse_category.mtx', sparse_category)\n",
+    "mmwrite('sparse_title.mtx', sparse_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# joined_data = mmread('joined_data.mtx')\n",
+    "# sparse_category = mmread('sparse_category')\n",
+    "# sparse_title = mmread('sparse_title')"
    ]
   },
   {
@@ -531,12 +565,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
+    "from sklearn.cross_validation import ShuffleSplit\n",
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.cross_validation import ShuffleSplit"
+    "import importlib\n",
+    "import util\n",
+    "\n",
+    "importlib.reload(util)\n",
+    "from util import print_log, validate_model, sparse_validate_model"
    ]
   },
   {
@@ -545,20 +595,14 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-04-02 20:17:16,079569\tstarting validation\n",
-      "2016-04-02 20:17:17,595724\tstarting iteration 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Validate logistic regression \n",
     "print_log(\"starting validation\")\n",
-    "sparse_validate_model(X=joined_data, Y=train.brand_id.astype(str), classifier=LogisticRegression(), \n",
+    "# clf = LogisticRegression()\n",
+    "# clf = SGDClassifier(loss='log')\n",
+    "clf = MultinomialNB()\n",
+    "util.sparse_validate_model(X=joined_data, Y=pd.np.ravel(train.brand_id.astype(int)), classifier=clf, \n",
     "               split_generator=lambda Y: ShuffleSplit(n=Y.shape[0], n_iter=3, test_size=0.4))\n",
     "print_log(\"completed validation\")"
    ]
@@ -571,6 +615,78 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply Model\n",
+    "--"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_title_sparse = sparse_title = vectorizer.transform(test['product_title'])\n",
+    "test_category_sparse = category_dict_vectorizer.transform(test.category_id.astype(str).apply(lambda x: {x: 1}))\n",
+    "joined_test_data = hstack([sparse_category, sparse_title], format='csr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mmwrite('joined_test_data.mtx', joined_test_data)\n",
+    "mmwrite('test_title_sparse', test_title_sparse)\n",
+    "mmwrite('test_category_sparse', test_category_sparse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "joined_test_data = mmread('joined_test_data.mtx')\n",
+    "test_title_sparse = mmread('test_title_sparse.mtx')\n",
+    "test_category_sparse = mmread('test_category_sparse.mtx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_pred = clf.predict(joined_test_data)"
+   ]
   }
  ],
  "metadata": {
