--- a/notebooks/shanmuga.ipynb
+++ b/notebooks/shanmuga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "raw_test = pd.DataFrame([line for line in open('../data/classification_blind_set.tsv',encoding='utf8')],columns=['line'])"
+    "raw_test = pd.DataFrame([line for line in open('../data/classification_blind_set_corrected.tsv',encoding='utf8')],columns=['line'])"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Tokenizer2(object):\n",
+    "    def __init__(self):\n",
+    "        self.tokenizer = word_tokenize\n",
+    "        self.stop_words = set(\n",
+    "        ['is', 'of', 'it', 'at', 'on', 'and', 'as', 'the', 'to', 'are', 'this', 'that', 'be', 'in',\n",
+    "          'an', 'or','any', 'all', 'am','you','we', '__NUMBER__', '__SERIAL__'])\n",
+    "\n",
+    "    def __call__(self, text):\n",
+    "        text = text.lower()\n",
+    "        # replace special characters\n",
+    "        text = re.sub(r'[^a-z0-9\\s/\\\\_\\t,\\-]', '', text,flags=re.IGNORECASE)\n",
+    "        text = re.sub(r'[/\\\\_\\t,-]', ' ', text,flags=re.IGNORECASE)\n",
+    "        # replace numbers to reduce number of features\n",
+    "        text = re.sub(r'\\b[0-9]+\\b', ' __NUMBER__ ', text) \n",
+    "        # replace possible product/serial numbers\n",
+    "        text = re.sub(r'\\b\\w*\\d+\\w*\\d?\\b', ' __SERIAL__ ', text)\n",
+    "                \n",
+    "        tokens = [w for w in self.tokenizer(text) if (w not in self.stop_words and len(w)>1)]\n",
+    "        # only return first and last two tokens\n",
+    "        \n",
+    "        tokens = tokens if len(tokens) <5 else tokens[:3] + tokens[-2:]\n",
+    "        \n",
+    "        token_dict = {}\n",
+    "        \n",
+    "        for i,token in enumerate(tokens):\n",
+    "            token_dict['word_'+str(i)] = token\n",
+    "        \n",
+    "        return token_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "619243 ../data/classification_blind_set.tsv\r\n"
+      "wc: ../data/classification_blind_set.tsv: No such file or directory\r\n"
      ]
     }
    ],
@@ -131,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -139,10 +177,10 @@
     {
      "data": {
       "text/plain": [
-       "((999996, 3), (619243, 2))"
+       "((999996, 3), (619240, 2))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -168,10 +206,10 @@
     {
      "data": {
       "text/plain": [
-       "(4, 0)"
+       "(4, 3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -203,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shanmuga/anaconda/envs/py3/lib/python3.4/site-packages/ipykernel/__main__.py:1: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "/opt/anaconda/lib/python3.4/site-packages/ipykernel/__main__.py:1: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
       "  if __name__ == '__main__':\n"
      ]
     },
@@ -247,7 +285,7 @@
        "575503  \"This hub is built strong and ideal for industrial environments. With the StarTech.com ST4200USBM 4-port hub you can wall-mount or install onto a DIN rail for convenient access to the ports. This four port industrial hub can be bus powered or self powered with a three wire terminal block connector 7-24V . Plug in your most demanding next-generation peripherals and still enjoy data transfer speed\\tStarTech\\tcomputers & accessories > networking products > hubs\\n"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -284,10 +322,10 @@
     {
      "data": {
       "text/plain": [
-       "(707,)"
+       "(705,)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,22 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32231,)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vc = train.brand_id.value_counts()\n",
     "vc[vc<20].shape"
@@ -328,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -371,20 +398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-04-02 20:54:45,879530\tstarting vectorizer fit_transform\n",
-      "2016-04-02 20:59:47,948838\tcompleted vectorizer fit_transform\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vectorizer = TfidfVectorizer(tokenizer=Tokenizer())\n",
     "print_log(\"starting vectorizer fit_transform\")\n",
@@ -394,19 +412,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "distinct words found 62778\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"distinct words found\", len(vectorizer.vocabulary_))"
    ]
@@ -421,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -432,20 +442,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-04-02 20:59:48,163386\tstarting sparse category\n",
-      "2016-04-02 20:59:52,085335\tcompleted sparse category\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "category_dict_vectorizer = DictVectorizer()\n",
     "print_log(\"starting sparse category\")\n",
@@ -455,29 +456,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((999996, 609), ((999996,), 609))"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sparse_category.shape, (train.category_id.shape, train.category_id.nunique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -488,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -499,22 +489,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(999996, 63387)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "joined_data.shape"
    ]
@@ -687,6 +666,101 @@
    "source": [
     "test_pred = clf.predict(joined_test_data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# category wise model strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from nltk import word_tokenize\n",
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "class Tokenizer(object):\n",
+    "    def __init__(self):\n",
+    "        self.tokenizer = word_tokenize\n",
+    "        self.stop_words = set(\n",
+    "        ['is', 'of', 'it', 'at', 'on', 'and', 'as', 'the', 'to', 'are', 'this', 'that', 'be', 'in',\n",
+    "          'an', 'or','any', 'all', 'am','you','we', '__NUMBER__', '__SERIAL__'])\n",
+    "\n",
+    "    def __call__(self, text):\n",
+    "        text = text.lower()\n",
+    "        # replace special characters\n",
+    "        text = re.sub(r'[^a-z0-9\\s/\\\\_\\t,\\-]', '', text,flags=re.IGNORECASE)\n",
+    "        text = re.sub(r'[/\\\\_\\t,-]', ' ', text,flags=re.IGNORECASE)\n",
+    "        # replace numbers to reduce number of features\n",
+    "        text = re.sub(r'\\b[0-9]+\\b', ' __NUMBER__ ', text) \n",
+    "        # replace possible product/serial numbers\n",
+    "        text = re.sub(r'\\b\\w*\\d+\\w*\\d?\\b', ' __SERIAL__ ', text)\n",
+    "                \n",
+    "        tokens = [w for w in self.tokenizer(text) if (w not in self.stop_words and len(w)>1)]\n",
+    "        # only return first and last two tokens\n",
+    "        return tokens if len(tokens) <5 else tokens[:3] + tokens[-2:]\n",
+    "    \n",
+    "def learn_model_for_category(train_df):\n",
+    "    category = train.category_id.iloc[0]\n",
+    "    learner = MultinomialNB()\n",
+    "    vectorizer = TfidfVectorizer(tokenizer=Tokenizer())\n",
+    "    estimators = [('transform', vectorizer), ('learner', learner)]\n",
+    "    pipe_line = Pipeline(estimators)\n",
+    "    pipe_line.fit(train_df['product_title'].values,train_df['brand_id'].astype(int))\n",
+    "    joblib.dump(pipe_line,'category_'+str(category)+'_model.clf')\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "category_size = train.category_id.value_counts()\n",
+    "major_cats = category_size[category_size>100].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4min 24s, sys: 7.13 s, total: 4min 31s\n",
+      "Wall time: 5min 22s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time cat_models = train.groupby('category_id').apply(learn_model_for_category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
