marked first submission

--- a/notebooks/first_submission.ipynb
+++ b/notebooks/first_submission.ipynb
@@ -228,6 +228,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First submission begin"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -403,6 +410,13 @@
    "outputs": [],
    "source": [
     "category_wise_popular_brand_submission.to_csv('category_wise_popular_brand_submission.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "End first submission"
    ]
   },
   {
