--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 # Data Monster
 
 Hackathon repository of vumaasha and shanmuga-cv
+
+Here is the link to the presentation of our submission
+https://docs.google.com/presentation/d/1miIsMdPrpI8isw77yxNIz9iOr3-fy7TH4v_z6D8hUxI/edit?usp=sharing
