--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # Data Monster
 
+This repo has our submissions to the Indix data monster hackathon. We won this hackathon and also received a flash iPhone 6s as award. Thanks @indix for hosting this hackathon
+
 Hackathon repository of vumaasha and shanmuga-cv
 
 Here is the link to the presentation of our submission
