--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Data Monster
 
-This repo has our submissions to the Indix data monster hackathon. We won this hackathon and also received a shiny brand new iPhone-6s as award. Thanks @indix for hosting this hackathon
+This repo has our submissions to the Indix data monster hackathon. We won first place in this hackathon and also received a shiny brand new iPhone-6s. Thanks @indix for hosting this hackathon
 
 Hackathon repository of vumaasha and shanmuga-cv
 
